added sign in page

--- a/index.html
+++ b/index.html
@@ -4,21 +4,22 @@
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>A2</title>
-  <link rel='stylesheet' type="text/css" href="vendors/css/grid.css">
-  <link rel='stylesheet' type="text/css" href="vendors/css/normalize.css">
+  <link rel='stylesheet' type="text/css" href="resources/css/grid.css">
+  <link rel='stylesheet' type="text/css" href="resources/css/normalize.css">
   <link rel='stylesheet' type="text/css" href="resources/css/landing_style.css">
   <link rel='stylesheet' type="text/css" href="resources/css/landing_queries.css">
   <link href="https://fonts.googleapis.com/css?family=Lato:100,300,300i,400" rel="stylesheet">
+
 </head>
 <body>
 
 <header>
   <nav>
     <div class="row">
-      <img src="resources/img/dal-logo-white.png" class="logo" alt="DalIntern-Logo">
+      <img src="images/dal-logo-white.png" class="logo" alt="DalIntern-Logo">
       <ul class="main-nav">
         <li><a href="#">About Us</a></li>
-        <li><a href="signin.html">Sign In</a></li>
+        <li><a href="login.html">Sign In</a></li>
         <li><a href="register.php">Register</a></li>
       </ul>
     </div>
@@ -29,6 +30,14 @@
   </div>
 </header>
 
+<!--<footer class="py-3 bg-dark">
+  <div class="footer">
+    <p class="text-center m-1 text-justify text-white">Copyright &copy; DalIntern 2018</p>
+  </div>
+</footer>
+
+<script src="files/jquery/jquery.min.js"></script>
+<script src="files/bootstrap/js/bootstrap.bundle.min.js"></script>-->
 
 </body>
 </html>
