--- a/companyPage.html
+++ b/companyPage.html
@@ -35,7 +35,7 @@
           <a class="nav-link" href="explore.php">Explore</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Sign In</a>
+          <a class="nav-link" href="login.html">Sign In</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="register.php">Register</a>
@@ -136,7 +136,7 @@
   </div>
 </footer>
 
-<script src="files/jquery/jquery.min.js"></script>
+<script src="resources/jquery/jquery.min.js"></script>
 <script src="files/bootstrap/js/bootstrap.bundle.min.js"></script>
 
 </body>
