--- a/companyPage.html
+++ b/companyPage.html
@@ -4,7 +4,7 @@
   <title>Company Name</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="CSS/companyPage.css">
+  <link rel="stylesheet" href="resources/css/companyPage.css">
   <!-- for reviews stars -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
