--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html>
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>A2</title>
+  <title>Dal Intern</title>
   <link rel='stylesheet' type="text/css" href="resources/css/grid.css">
   <link rel='stylesheet' type="text/css" href="resources/css/normalize.css">
   <link rel='stylesheet' type="text/css" href="resources/css/landing_style.css">
@@ -30,14 +30,6 @@
   </div>
 </header>
 
-<!--<footer class="py-3 bg-dark">
-  <div class="footer">
-    <p class="text-center m-1 text-justify text-white">Copyright &copy; DalIntern 2018</p>
-  </div>
-</footer>
-
-<script src="files/jquery/jquery.min.js"></script>
-<script src="files/bootstrap/js/bootstrap.bundle.min.js"></script>-->
 
 </body>
 </html>
