adding review page

--- a/companyPage.html
+++ b/companyPage.html
@@ -66,7 +66,7 @@
       <button class="review_button">Add Review</button>
       <h3 class="job_profile_heading">Job Profiles</h3>
       <ul class="nav nav-pills nav-stacked">
-        <li><a href="#">Data Scientist, Canada</a></li>
+        <li><a href="review.html">Data Scientist, Canada</a></li>
         <li><a href="#">Software Developer, United States</a></li>
         <li><a href="#">Business Analyst, Canada</a></li>
         <li><a href="#">Front-End Developer, France</a></li>
